package exercise.ex02_code;

public interface Ticket {

    public int getTicketNum();

}
